--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
+    <!--
+       <head>
         <meta charset="utf-8">
         <title>Test</title>
         <link rel="stylesheet" href="/styles/resets.css">
@@ -9,6 +10,9 @@
         <link rel="stylesheet" href="/styles/form.css">
         <link rel="stylesheet" href="/styles/footer.css">
     </head>
+      
+    -->
+   
 
     <body>
 
@@ -38,6 +42,17 @@
         <footer>
             <p>This is a footer</p>
         </footer>
+<!--
+
+     <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script>
+-->
+       
 
     </body>
 </html>
