--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -36,6 +36,11 @@
             <section>
                 <strong>Form Results:</strong>
                 <div id="results"></div>
+                <div id="polarity"></div>
+                <div id="agreement"></div>
+                <div id="subjectivity"></div>
+                <div id="confidence"></div>
+                <div id="irony"></div>
             </section>
         </main>
 
