--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<!--
-       <head>
+
+    <head>
         <meta charset="utf-8">
         <title>Test</title>
+        <!-- 
         <link rel="stylesheet" href="/styles/resets.css">
         <link rel="stylesheet" href="/styles/base.css">
         <link rel="stylesheet" href="/styles/header.css">
         <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css">
+        <link rel="stylesheet" href="/styles/footer.css">-->
     </head>
       
-    -->
+  
 
 
 <body>
@@ -27,10 +28,9 @@
 
     <main>
         <section>
-            <form class="" onsubmit="return handleSubmit(event)">
+            <form class="">
                 <input id="url" type="text" name="input">
-                <input id="btnsubmit" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)"
-                    onsubmit="return handleSubmit(event)">
+                <input id="button-submit" type="button" name="" value="submit">
             </form>
         </section>
 
