--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section>
-            <strong>Form Results:</strong>
+            <strong>Results:</strong>
             <div id="polarity"></div>
             <div id="confidence"></div>
             <div id="irony"></div>
